--- a/besoins.tex
+++ b/besoins.tex
@@ -163,15 +163,17 @@ Ce document présente les extensions pour le projet PDL
 {}
 
 \besoin{backend:basicFilters}
-{Ajout de filtres basiques }
+{Ajout de filtres basiques}
 {
-  La liste des images présentes sur le serveur doit être envoyée par le serveur lorsqu'il reçoit une requête \verb!GET! à l'adresse \verb!/images!.
-
-  Le résultat sera fourni au format \verb!JSON!, sous la forme d'un tableau
-  contenant pour chaque image un objet avec les informations suivantes :
+  Ajout de quelques filtres basiques dont voici la liste: 
   \begin{description}
-  \item
-  \end{description}
+  \item[sharpness :] Filtre de netteté (sharpness filter) - pour augmenter la netteté des détails dans l'image
+  \item[saturation :] Filtre de saturation (saturation filter) - pour augmenter ou diminuer l'intensité des couleurs dans l'image
+  \item[vignette :] Filtre de vignette (vignette filter) - pour assombrir les bords de l'image et attirer l'attention sur le centre
+  \item[grain :] Filtre de grain (grain filter) - pour ajouter un effet de bruit visuel pour donner à l'image une apparence plus granuleuse
+  \item[sepia :] Filtre de sépia (sepia filter) - pour donner à l'image une teinte brunâtre vintage.
+  \item[negative :] Filtre negatif (negative filter) - pour inverser les couleurs d'une image.
+  \end{description} 
 }
 {}
 {}
