--- a/besoins.tex
+++ b/besoins.tex
@@ -93,16 +93,12 @@ Ce document présente les extensions pour le projet PDL
 \besoin{backend:selectBorder}
 {Choisir les type de bordure pour les filtres}
 {
-  La liste des images présentes sur le serveur doit être envoyée par le serveur lorsqu'il reçoit une requête \verb!GET! à l'adresse \verb!/images!.
-
-  Le résultat sera fourni au format \verb!JSON!, sous la forme d'un tableau
-  contenant pour chaque image un objet avec les informations suivantes :
+  Les différentes façons dont les bords sont gérés par l'algorithme de convolution sont maintenant modifiable au choix parmis : 
   \begin{description}
-  \item[Id:] L'identifiant auquel est accessible l'image (type \verb!long!)
-  \item[Name:] Le nom du fichier qui a servi à construire l'image (type \verb!string!)
-  \item[Type:] Le type de l'image (type \verb!org.springframework.http.MediaType!) 
-  \item[Size:] Une description de la taille de l'image, par exemple \verb!640*480*3! pour
-    une image en couleur de $640 \times 480$ pixels (type \verb!string!)
+  \item[SKIP:] les bords ne sont pas traités.
+  \item[NORMALIZED:] le masque est normalisé pour ne prendre en compte que les valeurs au sein de l'image.
+  \item[EXTENDED:] les pixels du bord sont étendus hors des limites, par exemple get(-1,0) et get(-2, 0) deviennent get(0,0).
+  \item[REFLECT:] les accès hors de l'image sont réfléchis pour rester dans l'image, par exemple get(0,-2) devient get(0,2)
   \end{description}
 }
 {}
@@ -112,16 +108,13 @@ Ce document présente les extensions pour le projet PDL
 \besoin{backend:cropimages}
 {Rogner des images}
 {
-  La liste des images présentes sur le serveur doit être envoyée par le serveur lorsqu'il reçoit une requête \verb!GET! à l'adresse \verb!/images!.
-
-  Le résultat sera fourni au format \verb!JSON!, sous la forme d'un tableau
-  contenant pour chaque image un objet avec les informations suivantes :
+  Une image peut être rognée afin de créer une nouvelle image dont le contenu dépend de la zone de rognage choisie. L'algorithme prendra 5 paramètres : 
   \begin{description}
-  \item[Id:] L'identifiant auquel est accessible l'image (type \verb!long!)
-  \item[Name:] Le nom du fichier qui a servi à construire l'image (type \verb!string!)
-  \item[Type:] Le type de l'image (type \verb!org.springframework.http.MediaType!) 
-  \item[Size:] Une description de la taille de l'image, par exemple \verb!640*480*3! pour
-    une image en couleur de $640 \times 480$ pixels (type \verb!string!)
+  \item[img : ] L'image d'origine
+  \item[xMin : ] L'abscisse du pixel au coin haut gauche
+  \item[yMin : ] L'ordonnée du pixel au coin haut gauche
+  \item[xMax : ] L'abscisse du pixel au coin bas droit
+  \item[yMax : ] L'ordonnée du pixel au coin bas droit
   \end{description}
 }
 {}
@@ -131,16 +124,12 @@ Ce document présente les extensions pour le projet PDL
 \besoin{backend:applyfilteroncroppedimage}
 {Appliquer un filtre sur la selection de l'image}
 {
-  La liste des images présentes sur le serveur doit être envoyée par le serveur lorsqu'il reçoit une requête \verb!GET! à l'adresse \verb!/images!.
-
-  Le résultat sera fourni au format \verb!JSON!, sous la forme d'un tableau
-  contenant pour chaque image un objet avec les informations suivantes :
+  Lors de la sélection de n'importe quel algorithme, il est possible de l'appliquer sur une partie de l'image plutôt que sur son entièreté. Tous les algorithmes auront donc 4 paramètres en plus : 
   \begin{description}
-  \item[Id:] L'identifiant auquel est accessible l'image (type \verb!long!)
-  \item[Name:] Le nom du fichier qui a servi à construire l'image (type \verb!string!)
-  \item[Type:] Le type de l'image (type \verb!org.springframework.http.MediaType!) 
-  \item[Size:] Une description de la taille de l'image, par exemple \verb!640*480*3! pour
-    une image en couleur de $640 \times 480$ pixels (type \verb!string!)
+  \item[xMin : ] L'abscisse du pixel au coin haut gauche
+  \item[yMin : ] L'ordonnée du pixel au coin haut gauche
+  \item[xMax : ] L'abscisse du pixel au coin bas droit
+  \item[yMax : ] L'ordonnée du pixel au coin bas droit
   \end{description}
 }
 {}
@@ -149,16 +138,12 @@ Ce document présente les extensions pour le projet PDL
 \besoin{backend:selectionColor}
 {Appliquer un filtre de selection de couleur}
 {
-  La liste des images présentes sur le serveur doit être envoyée par le serveur lorsqu'il reçoit une requête \verb!GET! à l'adresse \verb!/images!.
-
-  Le résultat sera fourni au format \verb!JSON!, sous la forme d'un tableau
-  contenant pour chaque image un objet avec les informations suivantes :
+  L'algorithme prend une intervalle de couleur, il est possible de choisir si les pixels dont la couleur appartient à l'intervalle la voient changer (noir et blanc ou autre couleur) ou si elle est conservée. L'algorithme prend paramètres : 
   \begin{description}
-  \item[Id:] L'identifiant auquel est accessible l'image (type \verb!long!)
-  \item[Name:] Le nom du fichier qui a servi à construire l'image (type \verb!string!)
-  \item[Type:] Le type de l'image (type \verb!org.springframework.http.MediaType!) 
-  \item[Size:] Une description de la taille de l'image, par exemple \verb!640*480*3! pour
-    une image en couleur de $640 \times 480$ pixels (type \verb!string!)
+  \item[img: ] L'image d'origine
+  \item[hMin: ] la valeur de H minimum sur HSV
+  \item[hMax:] la valeur de H maximum sur HSV  
+  \item[newH:] IL FAUT CHANGER CA PARCE QU'ON PEUT PAS CHANGER UNE RANGE COULEUR EN UNE SEULE COULEUR CA FERAIT MOCHE MAIS PLUTOT CHOISIR DES RANGE DISPONIBLES PAR EXEMPLE (N&B, ROUGE, ORANGE, JAUNE, VERT, BLEU, VIOLET, etc...) 
   \end{description}
 }
 {}
@@ -183,16 +168,18 @@ Ce document présente les extensions pour le projet PDL
 \besoin{backend:removeElementFromImage}
 {Supprimer un element d'une image}
 {
-  La liste des images présentes sur le serveur doit être envoyée par le serveur lorsqu'il reçoit une requête \verb!GET! à l'adresse \verb!/images!.
-
-  Le résultat sera fourni au format \verb!JSON!, sous la forme d'un tableau
-  contenant pour chaque image un objet avec les informations suivantes :
+  Supprime une zone de l'image et la remplit selon le même principe que la convolution. Cet algorithme prend 6 paramètres : 
   \begin{description}
-  \item[Id:] L'identifiant auquel est accessible l'image (type \verb!long!)
-  \item[Name:] Le nom du fichier qui a servi à construire l'image (type \verb!string!)
-  \item[Type:] Le type de l'image (type \verb!org.springframework.http.MediaType!) 
-  \item[Size:] Une description de la taille de l'image, par exemple \verb!640*480*3! pour
-    une image en couleur de $640 \times 480$ pixels (type \verb!string!)
+  \item[img:] L'image d'origine
+  \item[xMin : ] L'abscisse du pixel au coin haut gauche
+  \item[yMin : ] L'ordonnée du pixel au coin haut gauche
+  \item[xMax : ] L'abscisse du pixel au coin bas droit
+  \item[yMax : ] L'ordonnée du pixel au coin bas droit
+  \item[fillingType : ] la façon de remplir la partie supprimée de l'image. Il y a type de remplissage : 
+  \begin{description}
+  \item[skip :] la partie supprimée n'est pas remplie, elle reste noire.
+  \item[]
+  \end{description}
   \end{description}
 }
 {}
