--- a/besoins.tex
+++ b/besoins.tex
@@ -180,7 +180,11 @@ Ce document présente les extensions pour le projet PDL.
   \item[fillingType : ] la façon de remplir la partie supprimée de l'image. Il y a type de remplissage : 
   \begin{description}
   \item[skip :] la partie supprimée n'est pas remplie, elle reste noire.
-  \item[]
+  \item[convolution :] la partie supprimée est remplie avec la convolution de l'image d'origine.
+  \item[left :] la partie supprimée est remplie de façon similaire à ce qu'il y a à sa gauche.
+  \item[right :] la partie supprimée est remplie de façon similaire à ce qu'il y a à sa droite.
+  \item[top :] la partie supprimée est remplie de façon similaire à ce qu'il y a en haut.
+  \item[bottom :] la partie supprimée est remplie de façon similaire à ce qu'il y a en bas.  
   \end{description}
   \end{description}
 }
