--- a/besoins.tex
+++ b/besoins.tex
@@ -1,5 +1,5 @@
 \documentclass[a4paper,12pt]{article}
-\usepackage[frenchb]{babel}
+\usepackage[french]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc} 
 \usepackage{lmodern}
@@ -68,7 +68,7 @@ Ce document présente les extensions pour le projet PDL.
 
 \subsection{BackEnd}
 
-\besoin{backend: listAlgo}
+\besoin{backend:listAlgo}
 {Transférer la liste des algorithmes implementés}
 {
   La liste des algorithmes disponibles sur le serveur doit être envoyée par le serveur lorsqu'il reçoit une requête \verb!GET! à l'adresse \verb!/algorithms!.
@@ -81,7 +81,7 @@ Ce document présente les extensions pour le projet PDL.
   \item[Parameters] Une liste de paramètres (type \verb!List<Parameters>!) ci dessous spécification Parameters
   \begin{description}
     \item[type:] Le type de l'input ("select", "range") (type \verb!string!)
-    \item[Name:] Le point d'accès du paramètre \verb!/images?algorithm=*algo*\&<name>=*?*! (type \verb!string!)
+    \item[Name:] Le point d'accès du paramètre \verb!/images?algorithm=*algo*\&<name>=*value*! (type \verb!string!)
     \item[displayName:] Le nom d'affichage du paramètre (type \verb!string!)
     \item[options:] Le nom et la valeur associés à l'option de l'input (type \verb!string!)
   \end{description}
@@ -140,12 +140,12 @@ Ce document présente les extensions pour le projet PDL.
 \besoin{backend:selectionColor}
 {Appliquer un filtre de sélection de couleur}
 {
-  L'algorithme prend un intervalle de couleurs, il est possible de choisir si les pixels dont la couleur appartient à l'intervalle sont changés (noir et blanc ou autre couleur) ou si ils restent inchangés. L'algorithme prend en paramètres : 
+  L'algorithme prend un intervalle de couleurs, il est possible de choisir si les pixels dont la couleur appartient à l'intervalle sont changés (noir et blanc ou autre couleur) ou si ils restent inchangés. L'algorithme prend en paramètres :
   \begin{description}
   \item[img: ] L'image d'origine
   \item[hMin: ] la valeur de H minimum sur HSV
   \item[hMax:] la valeur de H maximum sur HSV  
-  \item[newH:] IL FAUT CHANGER CA PARCE QU'ON PEUT PAS CHANGER UNE RANGE COULEUR EN UNE SEULE COULEUR CA FERAIT MOCHE MAIS PLUTOT CHOISIR DES RANGE DISPONIBLES PAR EXEMPLE (N&B, ROUGE, ORANGE, JAUNE, VERT, BLEU, VIOLET, etc...) 
+  \item[newH:] IL FAUT CHANGER CA PARCE QU'ON PEUT PAS CHANGER UNE RANGE COULEUR EN UNE SEULE COULEUR CA FERAIT MOCHE MAIS PLUTOT CHOISIR DES RANGE DISPONIBLES PAR EXEMPLE (N\&B, ROUGE, ORANGE, JAUNE, VERT, BLEU, VIOLET, etc...) 
   \end{description}
 }
 {}
@@ -197,35 +197,26 @@ Ce document présente les extensions pour le projet PDL.
 \besoin{FrontEnd:ShowAlgo}
 {Afficher les algorithmes fournis par le serveur}
 {
-  La liste des images présentes sur le serveur doit être envoyée par le serveur lorsqu'il reçoit une requête \verb!GET! à l'adresse \verb!/images!.
-
-  Le résultat sera fourni au format \verb!JSON!, sous la forme d'un tableau
-  contenant pour chaque image un objet avec les informations suivantes :
-  \begin{description}
-  \item[Id:] L'identifiant auquel est accessible l'image (type \verb!long!)
-  \item[Name:] Le nom du fichier qui a servi à construire l'image (type \verb!string!)
-  \item[Type:] Le type de l'image (type \verb!org.springframework.http.MediaType!) 
-  \item[Size:] Une description de la taille de l'image, par exemple \verb!640*480*3! pour
-    une image en couleur de $640 \times 480$ pixels (type \verb!string!)
-  \end{description}
+  Le front doit pouvoir afficher les algorithmes donné par le backend (/algorithms)\verb!/images!.
+  voir \refBesoin{backend:listAlgo}
 }
 {}
 {}
 
 
 \besoin{FrontEnd:generateAnImage}
-{Générer une image avec DALL-E}
+{Générer une image avec stableDiffusion}
 {
-  La liste des images présentes sur le serveur doit être envoyée par le serveur lorsqu'il reçoit une requête \verb!GET! à l'adresse \verb!/images!.
+  Avoir une page pour faire des requetes a un serveur StableDiffusion
 
-  Le résultat sera fourni au format \verb!JSON!, sous la forme d'un tableau
-  contenant pour chaque image un objet avec les informations suivantes :
+  Les champs doivent etre les suivants :
   \begin{description}
-  \item[Id:] L'identifiant auquel est accessible l'image (type \verb!long!)
-  \item[Name:] Le nom du fichier qui a servi à construire l'image (type \verb!string!)
-  \item[Type:] Le type de l'image (type \verb!org.springframework.http.MediaType!) 
-  \item[Size:] Une description de la taille de l'image, par exemple \verb!640*480*3! pour
-    une image en couleur de $640 \times 480$ pixels (type \verb!string!)
+  \item[Prompt:] Une zone de texte pour le prompt de l'image
+  \item[Netative prompt:] Une zone de texte pour le prompt negatif de l'image
+  \item[Hauteur:] Un selecteur pour la hauteur de l'image
+  \item[Largeur:] Un selecteur pour la largeur de l'image
+  \item[Steps:] Le nombre de steps lors de la generation
+  \item[CFG scale:] Le niveau de liberté de l'IA
   \end{description}
 }
 {}
@@ -233,19 +224,9 @@ Ce document présente les extensions pour le projet PDL.
 
 
 \besoin{FrontEnd:seeStatus}
-{Voir l'avancement du traitement de l'image / d'un upload}
+{Voir l'avancement du traitement de l'image / d'un upload / de la generation d'une image}
 {
-  La liste des images présentes sur le serveur doit être envoyée par le serveur lorsqu'il reçoit une requête \verb!GET! à l'adresse \verb!/images!.
-
-  Le résultat sera fourni au format \verb!JSON!, sous la forme d'un tableau
-  contenant pour chaque image un objet avec les informations suivantes :
-  \begin{description}
-  \item[Id:] L'identifiant auquel est accessible l'image (type \verb!long!)
-  \item[Name:] Le nom du fichier qui a servi à construire l'image (type \verb!string!)
-  \item[Type:] Le type de l'image (type \verb!org.springframework.http.MediaType!) 
-  \item[Size:] Une description de la taille de l'image, par exemple \verb!640*480*3! pour
-    une image en couleur de $640 \times 480$ pixels (type \verb!string!)
-  \end{description}
+  Avoir un affichage claire de la progression d'un traitement d'image / de la generation d'une image ou d'un upload
 }
 {}
 {}
